<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_connection"
        android:title="@string/connect"
        android:icon="@drawable/ic_vpn" />
    <item
        android:id="@+id/nav_servers"
        android:title="@string/servers"
        android:icon="@drawable/ic_servers" />
    <item
        android:id="@+id/nav_subscriptions"
        android:title="@string/subscriptions"
        android:icon="@drawable/ic_subscription" />
    <item
        android:id="@+id/nav_statistics"
        android:title="@string/statistics"
        android:icon="@drawable/ic_statistics" />
    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings" />
</menu>
